# InferenceForDeepLearning

./: .gitignore  LICENSE  README.md
Algorithm/: CMakeLists.txt  DataDefine.cpp  DataDefine.h  ExportDefine.h
Algorithm/FileOperation/: FileOperationInclude.cpp  FileOperationInclude.h
Algorithm/Inference/: CMakeLists.txt  inference_commom.cpp  inference_commom.h  inference_define.cpp  inference_define.h  inference_include.cpp
Algorithm/Inference/InferenceFunction/: opencv_inference.cpp  opencv_inference.h
Algorithm/Json/: CJson.cpp  CJson.h  CJsonObject.cpp  CJsonObject.hpp  RWJsonInclude.cpp  RWJsonInclude.h
Test/InferenceTest/: CMakeLists.txt
Test/InferenceTest/ZcTest/: CMakeLists.txt  mian.cpp  test.cpp  test.h
documents/UML/: inference_class.vsdx
